add the basics to my home.tpl and add.tpl before attempting to work on the service.js

--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,8 +1,9 @@
 <div>
   <h3>Home Page</h3>
-  <p>Name</p>
-
-
-
+  <p>Name: {{ contact.name }} </p>
+  <p>Email: {{ contact.email }} </p>
+  <p>Website: {{ contact.website }} </p>
+  <p>Message: {{ contact.message }} </p>
+  
 </div>
 
