Just set up the bases for my ContactService. About to modify my home.tpl and add.tpl so that it can communicate with PARSE

--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,9 +1,9 @@
-<div>
+<div class="contact-info" ng-repeat="contact in vm.myContacts">
   <h3>Home Page</h3>
   <p>Name: {{ contact.name }} </p>
   <p>Email: {{ contact.email }} </p>
   <p>Website: {{ contact.website }} </p>
   <p>Message: {{ contact.message }} </p>
-  
+
 </div>
 
