--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,6 +1,5 @@
 <div class="contact-info" ng-repeat="contact in vm.myContacts">
-  <h3>Home Page</h3>
-  <p>Name: {{ contact.name }} </p>
+  <h3> {{ contact.name }}</h3>
   <p>Email: {{ contact.email }} </p>
   <p>Website: {{ contact.website }} </p>
   <p>Message: {{ contact.message }} </p>
