--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,38 @@
 
 body {
   background: #e2ebf3;
+  width: 800px;
+  margin: 20px auto;
 }
+
+.contact-info {
+  background: white;
+  border: 3px solid navy;
+  padding: 10px;
+  width: 50%;
+  display: inline-block;
+
+  h3 {
+    text-align: center;
+    font-weight: bold;
+  }
+}
+
+.top-bar {
+  margin-bottom: 30px;
+}
+
+form {
+  width: 600px;
+  margin: 5px auto;
+  background: white;
+  border: 3px solid navy;
+  padding: 10px;
+
+  h2 {
+    text-align: center;
+    font-weight: bold;
+  }
+
+}
+
